<resources>
    <string name="app_name">MAD</string>
    <string name="Text1">Book Your Hotel For Quarantine</string>
    <string name="H1">Name = </string>
    <string name="H11">Location = </string>
    <string name="H111">Trincomalee</string>
    <string name="H12">Price for a day = </string>
    <string name="H2">Name = </string>
    <string name="H21">Location = </string>
    <string name="H112">Waskaduwa</string>
    <string name="H22">Price for a day = </string>
    <string name="H3">Name = </string>
    <string name="H31">Location = </string>
    <string name="H113">Negambo</string>
    <string name="H32">Price for a day = </string>
    <string name="Btn1">Next</string>
    <string name="T1">Starting Date</string>
    <string name="T2">Ending Date</string>
    <string name="T3">Name</string>
    <string name="T4">N.I.C</string>
    <string name="T5">Tel Number</string>
    <string name="Btn2">Total Price</string>
    <string name="Btn3">Book Now</string>
    <string name="Name">Covid-19 Health Care</string>
    <string name="S1">Sign Up</string>
    <string name="S11">User Name</string>
    <string name="S12">Password</string>
    <string name="S13">E-mail</string>
    <string name="S14">Date of Birth</string>
    <string name="S15">N.I.C</string>
    <string name="S16">Gender</string>
    <string name="S17">Tel No</string>
    <string name="S18">Address</string>
    <string name="Btn4">SignUp</string>
    <string name="S19">Already have n account?</string>
    <string name="Btn5">SignIn</string>
    <string name="btnHome">Home</string>
    <string name="GoBack">Go Back</string>
    <string name="btnP">PAY NOW</string>
    <string name="textQ">Quarantine</string>
    <string name="textP">Payment</string>
    <string name="txtU">User Profile</string>
    <string name="txtPc">PCR Test</string>
    <string name="textV">Vaccination</string>
    <string name="textEmr">Emergency</string>
    <string name="textSign">Sign Up</string>
    <string name="T6">No of Days</string>
    <string name="BtnDelete">Delete Booking</string>
    <string name="BtnUpdate">Update Booking</string>
    <string name="edit1">Your Booking Details</string>
    <string name="edit2">Booking ID</string>
    <string name="edit3">Name</string>
    <string name="edit4">Starting Date</string>
    <string name="edit5">Ending Date</string>
    <string name="edit6">No of Days</string>
    <string name="edit7">N.I.C</string>
    <string name="edit8">Tel Number</string>
    <string name="btnSave">Save</string>
    <string name="edit9">Hotel Name</string>
    <string name="T7">Hotel Name</string>
    <string name="editT9">Hotel Name</string>
    <string name="title_activity_payment4">payment4</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="BtnH1">Book Now</string>
    <string name="BtnH2">Book Now</string>
    <string name="BtnH3">Book Now</string>
    <string name="Tp">Price for a day</string>
    <string name="Th">Hotel Name</string>
    <string name="edit10">Total Price</string>
    <string name="txtV1">PCR TEST</string>
    <string name="pcr_meaning">Polymerase Chain Reaction</string>
    <string name="doPcr">How to do PCR Test ?</string>
    <string name="pcrStep1">01) Sample collection is done using a swab to collect respiratory material found in your nose.</string>
    <string name="pcrStep2">02) After collection, the swab is sealed in a tube and then sent to a laboratory.</string>
    <string name="pcrStep3">03) The PCR step then uses special chemicals and a PCR machine, called a thermal cycler, which cause a reaction to occur that makes millions of copies of a small portion of the SARS-CoV-2 virus’s genetic material.</string>
    <string name="BookPcrBtn">Book a date today to take a PCR test</string>
    <string name="hospital1">Asiri Center Hospital Norris Canal Road,</string>
    <string name="hospital1_Part2">Colombo - 10</string>
    <string name="bookingbutton">BOOK NOW</string>
    <string name="hospital2">Durdans Hospital - Colombo - 05</string>
    <string name="hospital3">Kings Hospital (Former Oasis) - Colombo - 05</string>
    <string name="hospital4">Lanka Hospital - Colombo - 05</string>
    <string name="hospital5">Nawaloka Hospital - Colombo - 02</string>
    <string name="hospital6">Cdem Hospital - Norris Canal Road,</string>
    <string name="hospital6_Part2">Colombo - 10</string>
    <string name="fillForm">Please fill this form</string>
    <string name="pName">PATIENT NAME(Mandatory)</string>
    <string name="nic">NATIONAL ID NO(mandatory for Sri Lanka)</string>
    <string name="address">ADDRESS(mandatory,Please Enter Postal)</string>
    <string name="phone">TELEPHONE(Mandatory)</string>
    <string name="email">EMAIL</string>
    <string name="nationality">NATIONALITY ( Local or Foreign )</string>
    <string name="date">DATE</string>
    <string name="NOoFPatients">NOoFPatients</string>
    <string name="booking">BOOK</string>
    <string name="deleteBooking">DELETE BOOKING</string>
    <string name="btnP">PAY NOW</string>


    <string name="name">Login</string>
    <string name="title">Covid - 19  Health Care</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="pcrPayment">PAYMENT</string>



    <string name="title1">Covid-19 Vaccine Registration Form</string>
    <string name="name1">Name</string>
    <string name="date1">Birth Date</string>
    <string name="phone1">Phone Number</string>
    <string name="postalCode">Postal Code</string>
    <string name="insuranceCompany">Insurance Company</string>
    <string name="insuranceId">Insuarance ID</string>
    <string name="next1">NEXT</string>
    <string name="nic1">NIC</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="email1">Email</string>
    <string name="address1">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="insurance_id">Insurance ID</string>
    <string name="text1">How many vaccines you need?</string>
    <string name="text2">Please list your current medication</string>
    <string name="medication">Medication</string>
    <string name="dosage">Dosage</string>
    <string name="text3">Please list down your allergies</string>
    <string name="allergic">Allergic to...</string>
    <string name="text4">Please mention the symptoms that apply..,</string>
    <string name="text5">Have you been diagnosed with covid-19?</string>
    <string name="radio1">Yes</string>
    <string name="radio2">No</string>
    <string name="total">Total is=</string>
    <string name="text6">I hereby declare that all given information are accurate</string>
    <string name="back">Back</string>
    <string name="edit">Cancel Registration</string>
    <string name="register">Register</string>



    <string name="txtV1">PCR TEST</string>
    <string name="pcr_meaning">Polymerase Chain Reaction</string>
    <string name="doPcr">How to do PCR Test ?</string>
    <string name="pcrStep1">01) Sample collection is done using a swab to collect respiratory material found in your nose.</string>
    <string name="pcrStep2">02) After collection, the swab is sealed in a tube and then sent to a laboratory.</string>
    <string name="pcrStep3">03) The PCR step then uses special chemicals and a PCR machine, called a thermal cycler, which cause a reaction to occur that makes millions of copies of a small portion of the SARS-CoV-2 virus’s genetic material.</string>
    <string name="BookPcrBtn">Book a date today to take a PCR test</string>

    <string name="hospital1">Asiri Center Hospital Norris Canal Road,</string>
    <string name="hospital1_Part2">Colombo - 10</string>
    <string name="bookingbutton">BOOK NOW</string>
    <string name="hospital2">Durdans Hospital - Colombo - 05</string>
    <string name="hospital3">Kings Hospital (Former Oasis) - Colombo - 05</string>
    <string name="hospital4">Lanka Hospital - Colombo - 05</string>
    <string name="hospital5">Nawaloka Hospital - Colombo - 02</string>
    <string name="hospital6">Cdem Hospital - Norris Canal Road,</string>
    <string name="hospital6_Part2">Colombo - 10</string>

    <string name="fillForm">Please fill this form</string>
    <string name="pName">PATIENT NAME(Mandatory)</string>
    <string name="nic">NATIONAL ID NO(mandatory for Sri Lanka)</string>
    <string name="address">ADDRESS(mandatory,Please Enter Postal)</string>
    <string name="phone">TELEPHONE(Mandatory)</string>
    <string name="email">EMAIL</string>
    <string name="nationality">NATIONALITY ( Local or Foreign )</string>
    <string name="date">DATE</string>
    <string name="NOoFPatients">NOoFPatients</string>
    <string name="booking">BOOK</string>

    <string name="pcrPayment">PAYMENT</string>


</resources>